// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gas Price should render correctly without data 1`] = `
<DocumentFragment>
  <section
    class="ethRate"
  >
    <button
      class="ethRate__btn"
      type="button"
    >
      Refresh Eth Rate
    </button>
    <div
      class="ethRate__text__wrap"
    >
      <p
        class="ethRate__text"
      >
        Exchange rate: Sorry, there was an error$
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Gas Price should render data 1`] = `
<DocumentFragment>
  <section
    class="ethRate"
  >
    <button
      class="ethRate__btn"
      type="button"
    >
      Refresh Eth Rate
    </button>
    <div
      class="ethRate__text__wrap"
    >
      <p
        class="ethRate__text"
      >
        Exchange rate: 2697.51$
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Gas Price should render loading 1`] = `
<DocumentFragment>
  <section
    class="ethRate"
  >
    <button
      class="ethRate__btn"
      type="button"
    >
      Refresh Eth Rate
    </button>
    <div
      class="ethRate__text__wrap"
    >
      <p
        class="ethRate__text"
      >
        Exchange rate: Loading...
      </p>
    </div>
  </section>
</DocumentFragment>
`;
